--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Git and Github Intro</title>
-  <link href="styles.css" type="text/css rel="stylesheet">
+  <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <h1>A Typical Header</h1>
